<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/sort"
        app:showAsAction="always|withText"
        android:icon="@drawable/ic_sort">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_sort_date"
                    android:checked="true"
                    android:title="@string/sort_date" />
                <item
                    android:id="@+id/menu_sort_name"
                    android:title="@string/sort_name"/>
                <item
                    android:id="@+id/menu_sort_priority"
                    android:title="@string/sort_priority"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/delete_all"
        android:icon="@drawable/ic_delete_all"
        android:title="@string/delete_all"
        app:showAsAction="always" />
    <item
        android:id="@+id/add_task"
        android:title="@string/create"
        android:icon="@drawable/ic_add"
        android:orderInCategory="100"
        app:showAsAction="always"/>

</menu>
